Add Material's layout grid

--- a/src/mdc.scss
+++ b/src/mdc.scss
@@ -2,13 +2,14 @@
 @import './mdc-variables';
 
 // MDC imports for the whole app
-@import "@material/typography/mdc-typography";
-@import '@material/react-button/index';
-@import '@material/react-card/index';
-@import '@material/react-text-field/index';
-@import '@material/react-tab-bar/index.scss';
-@import '@material/react-tab/index.scss';
-@import '@material/react-material-icon/index';
+@import '~@material/typography/mdc-typography';
+@import '~@material/react-layout-grid/index';
+@import '~@material/react-button/index';
+@import '~@material/react-card/index';
+@import '~@material/react-text-field/index';
+@import '~@material/react-tab-bar/index';
+@import '~@material/react-tab/index';
+@import '~@material/react-material-icon/index';
 
 // Override standard MDC classes
 @import './mdc-override';
