--- a/src/components/AppBar.module.scss
+++ b/src/components/AppBar.module.scss
@@ -1,12 +1,14 @@
 @import '../mdc';
 
+$menu-breakpoint: largephone;
+
 .container {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin: 1.5em 5% 1em 5%;
 
-  @media (min-width: mdc-layout-grid-breakpoint-min(largephone)) {
+  @media (min-width: mdc-layout-grid-breakpoint-min($menu-breakpoint)) {
     margin-top: 3em;
     margin-bottom: 3em;
   }
@@ -17,8 +19,18 @@
   width: 195px;
 }
 
+.menuContainer {
+  @media (min-width: mdc-layout-grid-breakpoint-min($menu-breakpoint)) {
+    display: none;
+  }
+}
+
 .buttonContainer {
   :not(:last-child) {
     margin-right: 1em;
+  }
+
+  @media (max-width: mdc-layout-grid-breakpoint-min($menu-breakpoint) - 1) {
+    display: none;
   }
 }
