--- a/src/mdc.scss
+++ b/src/mdc.scss
@@ -13,6 +13,8 @@
 @import '~@material/react-menu-surface/index';
 @import '~@material/react-tab/index';
 @import '~@material/react-tab-bar/index';
+@import '~@material/react-tab-indicator/index';
+@import '~@material/react-tab-scroller/index';
 @import '~@material/react-text-field/index';
 
 // Override standard MDC classes
