Add respond instruction to ShowRespond bottom bar

--- a/src/components/ShowRespond.module.scss
+++ b/src/components/ShowRespond.module.scss
@@ -1,3 +1,5 @@
+@import '../mdc';
+
 .bottomBar {
   margin-top: 1em;
 }
@@ -11,5 +13,14 @@
     margin: 0 1rem;
     text-align: center;
     word-break: break-word;
+  }
+
+  .submitButton {
+    @media (max-width: mdc-layout-grid-breakpoint-max(phone)) {
+      // Submit button icon
+      i {
+        display: none;
+      }
+    }
   }
 }
