--- a/src/components/PollRespondNameForm.module.scss
+++ b/src/components/PollRespondNameForm.module.scss
@@ -1,4 +1,16 @@
 .container {
+  margin-left: auto;
+  margin-right: auto;
+
+  max-width: 35em;
+  text-align: center;
+}
+
+.titleContainer {
+  margin-bottom: 2em;
+}
+
+.card {
   // Center card
   margin-left: auto;
   margin-right: auto;
