--- a/src/components/ShowResults.module.scss
+++ b/src/components/ShowResults.module.scss
@@ -4,12 +4,33 @@
 
 .timeline {
   flex: 1;
+  margin-right: 1.8em;
 }
 
-.sidebar {
-  margin-left: 1em;
-  width: 17em;
-  top: 1em;
-  position: -webkit-sticky;
-  position: sticky;
+@media all and (max-width: 899px) {
+  .sidebar {
+    display: none;
+  }
+  .bottomBar {
+    background-color: white;
+    position: fixed;
+    bottom: 0px;
+    left: 5%;
+    right: 5%;
+    height: 53px;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.16), 0 5px 10px rgba(0,0,0,0.23);
+  }
+}
+
+@media all and (min-width: 900px) {
+  .sidebar {
+    margin-left: 1em;
+    width: 17em;
+    top: 1em;
+    position: -webkit-sticky;
+    position: sticky;
+  }
+  .bottomBar {
+    display: none;
+  }
 }
