--- a/src/mdc.scss
+++ b/src/mdc.scss
@@ -6,6 +6,7 @@
 @import '~@material/typography/mdc-typography';
 @import '~@material/react-button/index';
 @import '~@material/react-card/index';
+@import '~@material/react-fab/index';
 @import '~@material/react-icon-button/index';
 @import '~@material/react-layout-grid/index';
 @import '~@material/react-list/index';
