--- a/src/components/ShowPage.module.scss
+++ b/src/components/ShowPage.module.scss
@@ -3,9 +3,13 @@
   padding: 0 5%;
 }
 
-.header {
-  text-align: center;
-  margin-bottom: 1em;
+.headerSection {
+  margin-bottom: 1.8em;
+
+  .header {
+    text-align: center;
+    margin-bottom: 1em;
+  }
 }
 
 .copyUrlInputContainer {
