Improve CreatePage and DashboardPage layouts

--- a/src/components/CreatePage.module.scss
+++ b/src/components/CreatePage.module.scss
@@ -11,29 +11,16 @@
 
 #header {
   text-align: center;
-  font-size: 250%;
   margin-bottom: 10px;
   margin: 20px;
-  font-weight: 700;
 }
 
 #pageContainer {
-  box-shadow: 50px 50px #fff;
   display: flex;
   flex-direction: column;
-
-  @media screen and (min-width: 750px) {
-    margin: 40px auto;
-    width: 700px;
-    -moz-border-radius: 0px;
-    -webkit-border-radius: 10px 10px 0px 0px;
-    border-radius: 10px 10px 12px 12px;
-    padding-top: 10px;
-  }
-
-  @media screen and (max-width: 750px) {
-    font-size: 10px;
-  }
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 700px;
 }
 
 .bottomBarContent {
