--- a/src/components/DashboardPage.module.scss
+++ b/src/components/DashboardPage.module.scss
@@ -7,12 +7,19 @@
 .pageContainer {
   display: flex;
   flex-direction: column;
+  align-items: center;
   margin-left: auto;
   margin-right: auto;
-  max-width: 700px;
 }
 
-.cardSection {
-  padding-bottom: 20px;
-  text-align: center;
+.card {
+  max-width: 40em;
+  width: 100%;
+
+  margin-bottom: 1.5em;
+  padding-top: 1em;
+
+  .cardHeader {
+    text-align: center;
+  }
 }
