Add more options to create page

--- a/src/mdc.scss
+++ b/src/mdc.scss
@@ -17,6 +17,7 @@
 @import '~@material/react-tab-indicator/index';
 @import '~@material/react-tab-scroller/index';
 @import '~@material/react-text-field/index';
+@import '~@material/radio/mdc-radio';
 
 // Override standard MDC classes
 @import './mdc-override';
