--- a/src/mdc-variables.scss
+++ b/src/mdc-variables.scss
@@ -1,6 +1,8 @@
 $mdc-theme-primary: #193163;
 $mdc-theme-secondary: #f9ba5c;
 $mdc-theme-surface: #f7f6f4;
+$the-pinkish-color: #ff806d;
+
 $mdc-typography-font-family: 'Fira Sans', 'Trebuchet MS', 'Helvetica Neue', 'Arial', sans-serif;
 
 // MDC Web does not have many breakpoints. Use Bootstrap breakpoints instead.
