--- a/src/components/DashboardPage.module.scss
+++ b/src/components/DashboardPage.module.scss
@@ -15,7 +15,7 @@
 }
 
 .card {
-  max-width: 40em;
+  max-width: 45em;
   width: 100%;
 
   margin-bottom: 1.5em;
@@ -23,6 +23,11 @@
 
   .cardHeader {
     text-align: center;
+  }
+
+  &#createCard {
+    @include mdc-card-fill-color($mdc-theme-primary);
+    padding: 0.6em 0.6em;
   }
 
   &#toRespondCard {
