changed sidebar to mdc list

--- a/src/components/ShowResultsSidebar.module.scss
+++ b/src/components/ShowResultsSidebar.module.scss
@@ -1,8 +1,35 @@
 @import '../mdc-variables';
+@import '../mdc';
+
+$sidebar-hidden-breakpoint: largephone;
+
+.sidebarContainer {
+  // for some reason when the sidebar is called from the bottomBar,
+  // it doesn't recognize the parent container's boundaries,
+  // this hack is ensures that the list items follow the parent
+  @media (max-width: mdc-layout-grid-breakpoint-min($sidebar-hidden-breakpoint)) {
+    width: 90vw;
+  }
+}
 
 .attendees {
   .attendeeListSection {
     margin-bottom: 2em;
+  }
+}
+
+.listContainer {
+  .listItems {
+    display: block;
+    display: block;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    word-wrap: break-word;
+    .listText {
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      word-wrap: break-word;
+    }
   }
 }
 
@@ -17,17 +44,8 @@
 .icon {
   position: absolute;
   vertical-align: -webkit-baseline-middle;
-  right: 32px;
-  margin-top: -2px;
+  right: 8px;
   color: $mdc-theme-primary;
-}
-
-.borderAccept {
-  border: 1px solid green;
-}
-
-.borderReject {
-  border: 1px solid red;
 }
 
 .pollTime {
