Beautify social auth buttons

--- a/src/components/LoginPage.module.scss
+++ b/src/components/LoginPage.module.scss
@@ -19,6 +19,14 @@
 
 .card {
   margin-top: 1.3em;
+
+  &.socialCard {
+    padding: 1em;
+
+    :not(:last-child) {
+      margin-bottom: 0.5em;
+    }
+  }
 }
 
 .form {
