Update email tag styling

--- a/src/components/MultiEmailOverride.scss
+++ b/src/components/MultiEmailOverride.scss
@@ -1,8 +1,8 @@
 @import '~react-multi-email/style.css';
 
 .react-multi-email [data-tag] {
-  color: white;
-  background-color: #193163;
+  color: black;
+  background-color: #14306724;
   font-weight: inherit;
   margin-bottom: 2px;
 }
