Change hex to rgb

--- a/src/components/MultiEmailOverride.scss
+++ b/src/components/MultiEmailOverride.scss
@@ -2,7 +2,7 @@
 
 .react-multi-email [data-tag] {
   color: black;
-  background-color: #14306724;
+  background-color: rgba(20, 48, 103, 0.141);
   font-weight: inherit;
   margin-bottom: 2px;
 }
