added more items (e.g. name, role, email) to menu surface panel

--- a/src/components/ShowResultsSidebar.module.scss
+++ b/src/components/ShowResultsSidebar.module.scss
@@ -36,3 +36,11 @@ $sidebar-hidden-breakpoint: largephone;
 .pollTime {
   margin-bottom: 1em;
 }
+
+.listItemHeader {
+  padding-left: 16px;
+  padding-right: 16px;
+  .listItemSubText {
+    color: #757575;
+  }
+}
