commented edit button in menu

--- a/src/components/ShowResultsSidebar.module.scss
+++ b/src/components/ShowResultsSidebar.module.scss
@@ -42,5 +42,6 @@ $sidebar-hidden-breakpoint: largephone;
   padding-right: 16px;
   .listItemSubText {
     color: #757575;
+    font-size: 14px;
   }
 }
