--- a/src/components/WelcomePage.module.scss
+++ b/src/components/WelcomePage.module.scss
@@ -64,10 +64,6 @@
 }
 
 .background {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   background: url('../background.svg') no-repeat;
   @include backgroundScreens;
 }
@@ -82,7 +78,7 @@
   
   @media screen and (max-width: 999px) {
     flex-direction: column;
-    padding-top: 200px;
+    padding-top: 300px;
     padding-bottom: 150px;
     .descriptionItems {
       flex: 100%;
@@ -112,42 +108,28 @@
   }
 }
 
-.slider {
-  width: 100%;
+.carouselContainer {
   display: flex;
   justify-content: center;
-}
-
-.imageContainer {
-  max-width: 100%;
-}
-
-
-.carouselContainer {
-  width: 60%;
-  margin: 20px 0px 10px 0px;
-  @media screen and (max-width: 999px) {
-    padding-top: 40px; 
-    width: 100%;
-    height: auto;
+  margin: 100px 0px;
+  .carouselCard {
+    background-image: url('../card.PNG');
+    background-repeat: no-repeat;
+    background-size: cover;
+    @media screen and (max-width: 999px) {
+      width: 100%;
+      padding-top: 60.25%;
+    }
+    @media screen and (min-width: 1000px) {
+      width: 60%;
+      padding-top: 32.25%;
+    }
   }
-  @media screen and (min-width: 1000px) {
-    width: 65%;
-    height: auto;
-  }
-}
-
-.carouselImage {
-  width: 100%;
-  height: auto;
-  display: block;
 }
 
 .readyContainer {
   padding: 100px 10%;
   display: flex;
-  width: 80%;
-
 
   .readyColumnText {
     .readyText {
@@ -207,5 +189,5 @@
   padding: 150px 10% 50px 10%;
   display: flex;
   background-size: 200%;
-  width: 80%;
+
 }
