added hide/unhide feature

--- a/src/components/ShowResultsSidebar.module.scss
+++ b/src/components/ShowResultsSidebar.module.scss
@@ -45,3 +45,9 @@ $sidebar-hidden-breakpoint: largephone;
     font-size: 14px;
   }
 }
+
+.hiddenIcon {
+  position: absolute;
+  right: 16px;
+  color: #757575;
+}
