Listify the side bar using mdc (#34)
* changed sidebar to mdc list

* removed excess css

* classified sidebar and added menu surface

* Update src/components/ShowResultsSidebar.js

* added update show respondent status in export

* added deleteRespondents, deleteResponse, and editRespondentStatus

* cleaned up debugging logs

* Update stored Show on mutate

* updated deleteResponse and editShowRespondentStatus to update timeline

* added list item for editing responses

* fixed positioning of menu bar to follow selected list

* added more items (e.g. name, role, email) to menu surface panel

* commented edit button in menu

* deleted some unrelated imports

* added hide/unhide feature

* removed available/notavalable list when there's no respondent inside

* Prettify

* Fix lint

* Fix nits

* Clean up state, fix some errors, and resolve some O(n^2) functions

* Remove debug console.logs

* Attempt to fix sidebar click crash

--- a/src/components/ShowResultsSidebar.module.scss
+++ b/src/components/ShowResultsSidebar.module.scss
@@ -1,4 +1,16 @@
 @import '../mdc-variables';
+@import '../mdc';
+
+$sidebar-hidden-breakpoint: largephone;
+
+.sidebarContainer {
+  // for some reason when the sidebar is called from the bottomBar,
+  // it doesn't recognize the parent container's boundaries,
+  // this hack is ensures that the list items follow the parent
+  @media (max-width: mdc-layout-grid-breakpoint-min($sidebar-hidden-breakpoint)) {
+    width: 90vw;
+  }
+}
 
 .attendees {
   .attendeeListSection {
@@ -17,19 +29,31 @@
 .icon {
   position: absolute;
   vertical-align: -webkit-baseline-middle;
-  right: 32px;
-  margin-top: -2px;
+  right: 8px;
   color: $mdc-theme-primary;
-}
-
-.borderAccept {
-  border: 1px solid green;
-}
-
-.borderReject {
-  border: 1px solid red;
 }
 
 .pollTime {
   margin-bottom: 1em;
+}
+
+.listItemHeader {
+  padding-left: 16px;
+  padding-right: 16px;
+  .listItemSubText {
+    color: #757575;
+    font-size: 14px;
+  }
+}
+
+.listText {
+  // Disable clicks on Chrome to prevent some weird error when the text is
+  // clicked in certain circumstances.
+  pointer-events: none;
+}
+
+.hiddenIcon {
+  position: absolute;
+  right: 16px;
+  color: #757575;
 }
