--- a/src/components/LoginPage.module.scss
+++ b/src/components/LoginPage.module.scss
@@ -1,3 +1,5 @@
+@import '../mdc';
+
 .outerContainer {
   max-width: 20em;
   margin-left: auto;
@@ -41,4 +43,12 @@
   .submitButton {
     margin-top: 1em;
   }
+}
+
+#googleButton {
+  @include mdc-button-filled-accessible(#dd4b39);
+}
+
+#facebookButton {
+  @include mdc-button-filled-accessible(#3b5998);
 }
