Add logo to login page

--- a/src/components/LoginPage.module.scss
+++ b/src/components/LoginPage.module.scss
@@ -45,6 +45,11 @@
   }
 }
 
+.contentLogo {
+  width: 19em;
+  bottom: 1em;
+}
+
 #googleButton {
   @include mdc-button-filled-accessible(#dd4b39);
 }
