--- a/src/components/ShowResultsSidebar.module.scss
+++ b/src/components/ShowResultsSidebar.module.scss
@@ -9,12 +9,17 @@ $sidebar-hidden-breakpoint: largephone;
   // this hack is ensures that the list items follow the parent
   @media (max-width: mdc-layout-grid-breakpoint-min($sidebar-hidden-breakpoint)) {
     width: 90vw;
+    margin-top: 4em;
   }
 }
 
 .attendees {
   .attendeeListSection {
-    margin-bottom: 2em;
+    margin-bottom: 1em;
+  }
+
+  .attendeeListHeader {
+    margin: 0;
   }
 }
 
@@ -34,6 +39,7 @@ $sidebar-hidden-breakpoint: largephone;
 }
 
 .pollTime {
+  margin-top: 0;
   margin-bottom: 1em;
 }
 
