--- a/src/components/ShowResultsSidebar.module.scss
+++ b/src/components/ShowResultsSidebar.module.scss
@@ -75,3 +75,11 @@ $sidebar-hidden-breakpoint: largephone;
     }
   }
 }
+
+.modalContainer {
+  background-color: #f7f6f4;
+  padding: 12px 24px;
+  .modalButtonContainer {
+    float: right;
+  }
+}
