--- a/src/components/AppBar.module.scss
+++ b/src/components/AppBar.module.scss
@@ -29,7 +29,18 @@ $menu-breakpoint: largephone;
 }
 
 .buttonContainer {
-  :not(:last-child) {
+  display: flex;
+  align-items: center;
+
+  .updateText {
+    text-align: right;
+  }
+
+  .barButton {
+    flex-shrink: 0;
+  }
+
+  >:not(:last-child) {
     margin-right: 1em;
   }
 
