--- a/src/components/BoomzButton.module.scss
+++ b/src/components/BoomzButton.module.scss
@@ -15,12 +15,27 @@ $btn-color: $mdc-theme-secondary;
   }
 }
 
-button.button {
-  @include mdc-button-filled-accessible(lighten($mdc-theme-secondary, 25%));
-  box-shadow: 0 0 0 rgba(204, 169, 44, 0.4);
+@mixin boomz {
+  box-shadow: 0 0 0 0 change-color($btn-color, $alpha: 0.8);
   animation: pulse 1.7s infinite;
 
   &:hover {
     animation: none;
   }
+}
+
+button.button {
+  @include mdc-button-filled-accessible(lighten($mdc-theme-secondary, 25%));
+  @include boomz;
+}
+
+li.menuItem {
+  @include boomz;
+  background-color: lighten($mdc-theme-secondary, 10%)
+}
+
+button.iconButton {
+  @include boomz;
+  border-radius: 50%;
+  background-color: lighten($mdc-theme-secondary, 10%)
 }
