Improve Timeline and ShowPage text display

--- a/src/components/ShowResults.module.scss
+++ b/src/components/ShowResults.module.scss
@@ -34,6 +34,7 @@ $sidebar-hidden-breakpoint: largephone;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  font-variant-numeric: tabular-nums;
 
   .mainText {
     flex: 1;
