--- a/src/components/ShowResultsSidebar.module.scss
+++ b/src/components/ShowResultsSidebar.module.scss
@@ -41,6 +41,7 @@ $sidebar-hidden-breakpoint: largephone;
 .pollTime {
   margin-top: 0;
   margin-bottom: 1em;
+  font-variant-numeric: tabular-nums;
 }
 
 .listItemHeader {
