--- a/src/components/ShowPage.module.scss
+++ b/src/components/ShowPage.module.scss
@@ -44,20 +44,25 @@ $menu-breakpoint: largephone;
 .headerWithShareBtn {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+}
 
-  .shareButton {
-    .buttonContent {
-      margin: 0.3em;
-      @media (max-width: mdc-layout-grid-breakpoint-min($menu-breakpoint)) {
-        display: none;
-      }
+.shareButton {
+  .buttonContent {
+    margin: 0.3em;
+    @media (max-width: mdc-layout-grid-breakpoint-min($menu-breakpoint)) {
+      display: none;
     }
   }
 }
 
 .showNameHeader {
-  margin-right: 10px;
+  margin-right: 20px;
+
+  @media (max-width: mdc-layout-grid-breakpoint-min($menu-breakpoint)) {
+    margin-right: 10px;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 }
